Fix scrollbar covering next page button

--- a/aanbod/src/components/CourseGroup.css
+++ b/aanbod/src/components/CourseGroup.css
@@ -37,12 +37,13 @@
 .CourseGroup .scroll-button {
 	position: absolute;
 	height: 100%;
-	width: 2vw;
+	width: 3.5vw;
 	bottom: 0;
 	top: 0;
 	display: none;
 	border: none;
 	padding: 0;
+	z-index: 3;
 }
 
 .CourseGroup:hover .scroll-button{
@@ -51,13 +52,11 @@
 
 .CourseGroup .scroll-button.left {
 	left: 0;
-	z-index: 2;
 	background: url(/previous-page-button.svg) no-repeat center rgba(20,20,20,.7);
 }
 
 .CourseGroup .scroll-button.right {
 	right: 0;
-	z-index: 2;
 	background: url(/next-page-button.svg) no-repeat center rgba(20,20,20,.7);
 }
 
